<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.rahmadarifanhr.quizz.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nama_pemain"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name_2"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/nama_pemain"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/nama_pemain"
        android:textColor="@android:color/white"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/score"
        android:layout_below="@+id/nama_pemain"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textSize="30sp" />
    <Button
        android:id="@+id/btnMainLagi"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/main_lagi"
        android:textColor="@android:color/white" />

    <Button
        android:layout_above="@+id/btnMainLagi"
        android:id="@+id/btnPenjelasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:text="@string/penjelasan"
        android:textColor="@android:color/white" />

</RelativeLayout>
